
	* configure.ac (jm_AC_TYPE_LONG_LONG): Replaces gt_TYPE_LONGLONG.
	* printf-args.c: Generalize to it can be compiled for wide strings.
	(PRINTF_PARSE, CHAR_T, DIRECTIVE, DIRECTIVES): New macros.
	* vasnprintf.c: Generalize to it can be compiled for wide strings.
	(VASNPRINTF, CHAR_T, DIRECTIVE, DIRECTIVES, PRINTF_PARSE, USE_SNPRINTF,
	SNPRINTF): New macros.

2003-05-30  Bruno Haible  <bruno@clisp.org>

	* autosprintf.texi: Tweak @dircategory and @direntry.
	Reported by Karl Berry <karl@freefriends.org>.

2003-05-22  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12.1 released.

2003-05-20  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms, config.h.msvc, autosprintf.h.msvc-shared):
	Don't use $< here.

2003-05-19  Bruno Haible  <bruno@clisp.org>

	* windows/asprintf.rc: Include <winver.h>.
	Reported by Perry Rapp.

2003-05-18  Bruno Haible  <bruno@clisp.org>

	* Makefile.msvc (DEBUGFLAGS): New variable.
	(asprintf.lib): Use it.

2003-05-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12 released.

2003-04-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms): Renamed from config.h.vms.
	* Makefile.vms: New variables ABIFLAGS, DEFS. Avoid rules with no
	lines. Update library creation rule. Don't use the force target.
	Correct wildcard syntax.
	Suggested by Jouk Jansen <joukj@hrem.stm.tudelft.nl>.

2003-04-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (docdir): Use datadir instead of prefix.
	* Makefile.msvc (datadir): New variable.
	(sub_docdir): Use it instead of prefix.
	(install, installdirs): Update.
	* Makefile.vms (datadir): New variable.
	(sub_docdir): Use it instead of prefix.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: New file.
	* Makefile.am (config.h.vms): New rule.
	(EXTRA_DIST): Add Makefile.vms and config.h.vms.

2003-03-17  Bruno Haible  <bruno@clisp.org>

	Native Woe32/MSVC support.
	* autosprintf.h.in: Renamed from autosprintf.h.
	* Makefile.msvc: New file.
	* README.woe32: New file.